--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-6">
-    <h2>Bookings I've made:</h2>
+    <h2 style="background-color: #f73c2c; border-radius: 10px; color: #ffffff; padding: 10px; margin-top: 30px; margin-bottom: 30px; font-size: 24px">Bookings I've made</h2>
 
     <% @user_bookings.each do |booking| %>
       <div class="card-product mb-4">
@@ -23,7 +23,7 @@
 
   <% if current_user.cars.any? %>
     <div class="col-md-6">
-      <h2>Bookings for cars I own:</h2>
+      <h2 style="background-color: #f73c2c; border-radius: 10px; color: #ffffff; padding: 10px; margin-top: 30px; margin-bottom: 30px; font-size: 24px">Bookings for cars I own</h2>
 
       <% @owner_bookings.each do |booking| %>
         <div class="card-product mb-4">
