--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -1,4 +1,4 @@
-<h2>Cars:</h2>
+<h2 style="background-color: #f73c2c; border-radius: 10px; color: #ffffff; padding: 10px; margin-top: 30px; margin-bottom: 30px; font-size: 24px" >Cars</h2>
 
 <div class="row">
   <% @cars.each do |car| %>
