--- a/app/views/cars/edit.html.erb
+++ b/app/views/cars/edit.html.erb
@@ -1,6 +1,6 @@
 <!-- app/views/cars/edit.html.erb -->
 
-<h1>Edit Car:</h1>
+<h1 style="color: #f73c2c;">Edit Car</h1>
 
 <%= simple_form_for @car do |f| %>
   <%= f.input :name %>
